--- a/app/src/main/res/layout/driver_trip_other.xml
+++ b/app/src/main/res/layout/driver_trip_other.xml
@@ -252,8 +252,9 @@
             android:layout_marginTop="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Seat 1"
+            android:text="No Seats"
             android:textStyle="bold"
+            android:id="@+id/tvSeats"
             android:textColor="#373737"
             android:textSize="14sp"/>
 
