--- a/app/src/main/res/layout/rider_profile.xml
+++ b/app/src/main/res/layout/rider_profile.xml
@@ -473,6 +473,7 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/colorPrimary"
                     android:text="0"
+                    android:id="@+id/tvRides"
                     android:textSize="20sp"
                     android:layout_gravity="center_horizontal"/>
 
@@ -501,6 +502,7 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/colorPrimary"
                     android:text="0"
+                    android:id="@+id/tvPoint"
                     android:textSize="20sp"
                     android:layout_gravity="center_horizontal"/>
 
@@ -530,6 +532,7 @@
                     android:textColor="@color/colorPrimary"
                     android:textSize="20sp"
                     android:text="0"
+                    android:id="@+id/tvBadges"
                     android:layout_gravity="center_horizontal"/>
 
                 <TextView
