--- a/app/src/main/res/layout/rider_route.xml
+++ b/app/src/main/res/layout/rider_route.xml
@@ -6,13 +6,14 @@
     android:layout_height="match_parent"
     android:background="#dbdfe8">
 
-<ScrollView
+    <android.support.v4.widget.NestedScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scrollbars="none">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingBottom="20dp"
         android:orientation="vertical">
 
 
@@ -404,6 +405,6 @@
 
 
     </LinearLayout>
-</ScrollView>
+</android.support.v4.widget.NestedScrollView>
 
 </LinearLayout>
