--- a/app/src/main/res/layout/posted_rides_list.xml
+++ b/app/src/main/res/layout/posted_rides_list.xml
@@ -4,12 +4,14 @@
     android:background="#dbdfe8"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/tool_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="?attr/actionBarSize"
-        android:background="?colorPrimary" >
+        android:background="@color/colorPrimary" >
 
 
     </android.support.v7.widget.Toolbar>
