--- a/app/src/main/res/layout/rider_home.xml
+++ b/app/src/main/res/layout/rider_home.xml
@@ -11,8 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        >
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
         ​
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/main.collapsing"
